fix: simplifica a recuperação de marcas no método listarMarcas